# Datathon_FIAP_Fase5

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
Modelos/: Configuracao_passosMagicos.pkl  Modelo_passosMagicos.pkl
Notebook/: Datathon_Fase5.ipynb  Tratamento_Datathon_Fase5.ipynb
data/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx
data/processed/: base_tratada.xlsx
